# cats_thesis

./: .env  .env.example  .gitignore  Makefile  THESIS_MASTER_PLAN_v5_FINAL.md  cats_static_audit_report_v6_FINAL.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
analysis/: export_tables.py  generate_plots.py  plot_latency.py  plot_routing.py  plot_rps.py  plot_ttft.py
benchmark/: isolation.py  locustfile.py  prepare_dataset.py  run_all.py  run_experiment.py
benchmark/results/: benchmark_bad_high_BASELINE-1_failures.csv  benchmark_bad_high_BASELINE-1_stats.csv  benchmark_bad_high_BASELINE-1_stats_history.csv  benchmark_bad_high_BASELINE-2_failures.csv  benchmark_bad_high_BASELINE-2_stats.csv  benchmark_bad_high_BASELINE-2_stats_history.csv  benchmark_bad_high_BASELINE-3_failures.csv  benchmark_bad_high_BASELINE-3_stats.csv  benchmark_bad_high_BASELINE-3_stats_history.csv  (+63 more)
cloud-node/: entrypoint.sh
docs/: CATS_NEXT_STEPS_AGENT_BRIEF.md  Codebase Walkthrough.md
edge-node/: entrypoint.sh
evaluation/: evaluate_tier1.py  rouge_eval.py
gateway/: auth.py  circuit_breaker.py  config.py  main.py  middleware.py  models.py  quality_sample.py  rate_limiter.py  requirements.txt  shared_client.py
network/: Dockerfile  init_proxies.py  toxiproxy_init.json
network/profiles/: bad.py  (+2 more)
orchestrator/: compute_reader.py  config.py  main.py  metrics_cache.py  requirements.txt  retry.py  routing_templates.py  shared_state.py  strategic_agent.py  tactical_agent.py  toxiproxy_reader.py
telemetry/: prometheus.yml
tests/: conftest.py
ui/: dashboard.py
(+11 files in other folders)
